--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "node index.js"
   },
   "devDependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "rimraf": "^3.0.2",
+    "simple-git": "^2.20.1"
   }
 }
