--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "main": "index.js",
   "license": "UNLICENSED",
   "engines": {
-    "node": ">=10"
+    "node": ">=18"
   },
   "scripts": {
-    "start": "node index.js"
+    "webflow": "node webflow/hook.js"
   },
   "devDependencies": {
-    "axios": "^0.19.2",
-    "rimraf": "^3.0.2",
-    "simple-git": "^2.20.1"
+    "axios": "^1.6.7"
   }
 }
